tests/fail/18_char_multichar.lang
функция main(): целое {
  символ multi = 'ab';
  вернуть 0;
}
